@@ -15,18 +15,20 @@
  */
 package com.android.tradefed.testtype;
 
-import com.android.ddmlib.testrunner.TestIdentifier;
 import com.android.tradefed.build.IBuildInfo;
 import com.android.tradefed.build.IFolderBuildInfo;
+import com.android.tradefed.command.CommandOptions;
 import com.android.tradefed.config.GlobalConfiguration;
 import com.android.tradefed.config.IConfiguration;
 import com.android.tradefed.config.IConfigurationReceiver;
 import com.android.tradefed.config.Option;
 import com.android.tradefed.invoker.IInvocationContext;
 import com.android.tradefed.log.LogUtil.CLog;
+import com.android.tradefed.metrics.proto.MetricMeasurement.Metric;
 import com.android.tradefed.result.FileInputStreamSource;
 import com.android.tradefed.result.ITestInvocationListener;
 import com.android.tradefed.result.LogDataType;
+import com.android.tradefed.result.TestDescription;
 import com.android.tradefed.util.CommandResult;
 import com.android.tradefed.util.CommandStatus;
 import com.android.tradefed.util.FileUtil;
@@ -44,7 +46,7 @@ import java.io.File;
 import java.io.FileOutputStream;
 import java.io.IOException;
 import java.util.ArrayList;
-import java.util.Collections;
+import java.util.HashMap;
 import java.util.List;
 
 /**
@@ -55,6 +57,11 @@ import java.util.List;
  */
 public abstract class SubprocessTfLauncher
         implements IBuildReceiver, IInvocationContextReceiver, IRemoteTest, IConfigurationReceiver {
+
+    /** The tag that will be passed to the TF subprocess to differentiate it */
+    public static final String SUBPROCESS_TAG_NAME = "subprocess";
+
+    public static final String PARENT_PROC_TAG_NAME = "parentprocess";
 
     @Option(name = "max-run-time", description =
             "The maximum time to allow for a TF test run.", isTimeVal = true)
@@ -77,18 +84,15 @@ public abstract class SubprocessTfLauncher
     private String mGlobalConfig = null;
 
     @Option(
-        name = "inject-invocation-data",
-        description = "Pass the invocation-data to the subprocess if enabled."
-    )
-    private boolean mInjectInvocationData = false;
+            name = "inject-invocation-data",
+            description = "Pass the invocation-data to the subprocess if enabled.")
+    private boolean mInjectInvocationData = true;
 
     // Temp global configuration filtered from the parent process.
     private String mFilteredGlobalConfig = null;
 
     /** Timeout to wait for the events received from subprocess to finish being processed.*/
     private static final long EVENT_THREAD_JOIN_TIMEOUT_MS = 30 * 1000;
-
-    protected static final String TF_GLOBAL_CONFIG = "TF_GLOBAL_CONFIG";
 
     protected IRunUtil mRunUtil =  new RunUtil();
 
@@ -130,13 +134,18 @@ public abstract class SubprocessTfLauncher
         mRunUtil = runUtil;
     }
 
+    /** Returns the {@link IRunUtil} that will be used for the subprocess command. */
+    protected IRunUtil getRunUtil() {
+        return mRunUtil;
+    }
+
     /**
      * Setup before running the test.
      */
     protected void preRun() {
         Assert.assertNotNull(mBuildInfo);
         Assert.assertNotNull(mConfigName);
-        IFolderBuildInfo tfBuild = (IFolderBuildInfo)mBuildInfo;
+        IFolderBuildInfo tfBuild = (IFolderBuildInfo) mBuildInfo;
         mRootDir = tfBuild.getRootDir().getAbsolutePath();
         String jarClasspath = FileUtil.getPath(mRootDir, "*");
 
@@ -156,6 +165,8 @@ public abstract class SubprocessTfLauncher
         if (mRemoteDebug) {
             mCmdArgs.add("-agentlib:jdwp=transport=dt_socket,server=y,suspend=y,address=10088");
         }
+        // FIXME: b/72742216: This prevent the illegal reflective access
+        mCmdArgs.add("--add-opens=java.base/java.nio=ALL-UNNAMED");
         mCmdArgs.add("-cp");
 
         mCmdArgs.add(jarClasspath);
@@ -163,7 +174,7 @@ public abstract class SubprocessTfLauncher
         mCmdArgs.add(mConfigName);
 
         // clear the TF_GLOBAL_CONFIG env, so another tradefed will not reuse the global config file
-        mRunUtil.unsetEnvVariable(TF_GLOBAL_CONFIG);
+        mRunUtil.unsetEnvVariable(GlobalConfiguration.GLOBAL_CONFIG_VARIABLE);
         if (mGlobalConfig == null) {
             // If the global configuration is not set in option, create a filtered global
             // configuration for subprocess to use.
@@ -187,7 +198,7 @@ public abstract class SubprocessTfLauncher
         if (mGlobalConfig != null) {
             // We allow overriding this global config and then set it for the subprocess.
             mRunUtil.setEnvVariablePriority(EnvPriority.SET);
-            mRunUtil.setEnvVariable(TF_GLOBAL_CONFIG, mGlobalConfig);
+            mRunUtil.setEnvVariable(GlobalConfiguration.GLOBAL_CONFIG_VARIABLE, mGlobalConfig);
         }
     }
 
@@ -215,11 +226,17 @@ public abstract class SubprocessTfLauncher
         UniqueMultiMap<String, String> data = mConfig.getCommandOptions().getInvocationData();
         for (String key : data.keySet()) {
             for (String value : data.get(key)) {
-                mCmdArgs.add("--invocation-data");
+                mCmdArgs.add("--" + CommandOptions.INVOCATION_DATA);
                 mCmdArgs.add(key);
                 mCmdArgs.add(value);
             }
         }
+        // Finally add one last more to tag the subprocess
+        mCmdArgs.add("--" + CommandOptions.INVOCATION_DATA);
+        mCmdArgs.add(SUBPROCESS_TAG_NAME);
+        mCmdArgs.add("true");
+        // Tag the parent invocation
+        mBuildInfo.addBuildAttribute(PARENT_PROC_TAG_NAME, "true");
     }
 
     /** {@inheritDoc} */
@@ -345,7 +362,7 @@ public abstract class SubprocessTfLauncher
     private void testCleanStdErr(File stdErrFile, ITestInvocationListener listener)
             throws IOException {
         listener.testRunStarted("StdErr", 1);
-        TestIdentifier tid = new TestIdentifier("stderr-test", "checkIsEmpty");
+        TestDescription tid = new TestDescription("stderr-test", "checkIsEmpty");
         listener.testStarted(tid);
         if (!FileUtil.readStringFromFile(stdErrFile).isEmpty()) {
             String trace =
@@ -354,7 +371,7 @@ public abstract class SubprocessTfLauncher
                             FileUtil.readStringFromFile(stdErrFile));
             listener.testFailed(tid, trace);
         }
-        listener.testEnded(tid, Collections.emptyMap());
-        listener.testRunEnded(0, Collections.emptyMap());
+        listener.testEnded(tid, new HashMap<String, Metric>());
+        listener.testRunEnded(0, new HashMap<String, Metric>());
     }
 }
